--- a/HTML/practice-file.html
+++ b/HTML/practice-file.html
@@ -19,7 +19,7 @@
   <body>
     <!-- Inline CSS -->
     <h1 style="color: blue;">HEADING - 1</h1>
-    <h2>HEADING - 2</h2>
+    <h2 id="heading-2">HEADING - 2</h2>
     <h6>HEADING - 6</h6>
 
     <!-- <img src="" alt=""> -->
@@ -29,12 +29,12 @@
     <p>This is a paragraph!</p>
 
     <div>
-      <h1>Div Heading!</h1>
-      <p>Div Paragraph!</p>
+      <h1 class="red-bold-text">Div Heading!</h1>
+      <p class="red-bold-text">Div Paragraph!</p>
     </div>
 
     <ul>
-      <li>first</li>
+      <li class="red-bold-text">first</li>
       <li>second</li>
     </ul>
 
