--- a/TEXT/text.html
+++ b/TEXT/text.html
@@ -15,5 +15,39 @@
       text ever since the 1500s when an unknown printer took a galley of type
       and scrambled it to!
     </p>
+
+    <ul class="unordered-list">
+      <li>List items!</li>
+      <li>List items!</li>
+      <li>List items!</li>
+    </ul>
+
+    <ol>
+      <li>List items!</li>
+      <li>List items!</li>
+      <li>List items!</li>
+    </ol>
+
+    <table>
+      <thead>
+        <tr>
+          <th>Number</th>
+          <th>Name</th>
+          <th>Age</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Bipin</td>
+          <td>45</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Jatin</td>
+          <td>50</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
