--- a/TEXT/text.html
+++ b/TEXT/text.html
@@ -9,12 +9,15 @@
   <body>
     <h1>Text Page</h1>
     <p class="subtitle">On this page we are learning text properties!</p>
-    <p class="text">
+    <div class="text">
       What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and
       typesetting industry Lorem Ipsum has been the industry's standard dummy
       text ever since the 1500s when an unknown printer took a galley of type
       and scrambled it to!
-    </p>
+      <div class="custom">
+
+      </div>
+    </div>
 
     <ul class="unordered-list">
       <li>List items!</li>
