--- a/TEXT/text.html
+++ b/TEXT/text.html
@@ -14,15 +14,28 @@
       typesetting industry Lorem Ipsum has been the industry's standard dummy
       text ever since the 1500s when an unknown printer took a galley of type
       and scrambled it to!
-      <div class="custom">
+      <div class="custom"></div>
+    </div>
 
-      </div>
+    <div style="height: 500px; width: 50vw; background-color: red">
+      <div style="background-color: black; height: 50px; width: 50%"></div>
     </div>
 
     <ul class="unordered-list">
       <li>List items!</li>
       <li>List items!</li>
-      <li>List items!</li>
+      <li>
+        List items!
+        <ul>
+          <li>List 1</li>
+          <li>
+            List 2
+            <ul>
+              <li>List A</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
     </ul>
 
     <ol>
